WIP turtle-web api + formatting
