# openapi.yaml
@@ -29,7 +29,6 @@ paths:
     post:
       tags: [programming]
       summary: Initialise a new program
-      description: Initialise a new program
       operationId: initProg
       responses:
         '204':
@@ -58,7 +57,8 @@ paths:
       summary: set code of program
       operationId: setProgCode
   # running
-  /examples/{id}/run:
+  ## new run
+  /examples/{name}/run:
     post:
       tags: [running]
       summary: run an example
@@ -68,16 +68,28 @@ paths:
       tags: [running]
       summary: start a program
       operationId: startRun
-  /run/{id}/events:
+  ## interpreter
+  /run/{id}/window:
     get:
       tags: [running]
       summary: poll for events from run
-      operationId: runEvents
-  /run/{id}/stop:
+      operationId: getRunWindow
+  /run/{id}/events:
+    post:
+      tags: [running]
+      summary: report user input
+      operationId: reportEvent
+  /run/{id}/stop: 
     post:
       tags: [running]
       summary: end a run
       operationId: stopRun
+  ## debugger
+  /run/{id}/debug:
+    post:
+      tags: [running]
+      summary: execute debug command
+      operationId: execCmd
 components:
   schemas:
     Example:
