# turtle-web/src/main.rs
@@ -1,165 +1,112 @@
-use std::{
-    sync::{
-        mpsc::{self, Receiver, Sender},
-        Arc,
-    },
-    thread,
-};
+use std::{collections::HashMap, sync::Arc, thread, time::Duration};
 
+use anyhow::anyhow;
 use axum::{
+    Router,
     extract::State,
-    http::Method,
+    http::{Method, StatusCode},
     routing::{get, post},
-    Json, Router,
 };
 use parking_lot::Mutex;
-use serde_json::{json, Value};
+use prog::Prog;
+use run::Run;
 use tokio::net::TcpListener;
 use tower_http::cors::{Any, CorsLayer};
-use turtle::{
-    debugger::{
-        config::RunConfig,
-        interface::Strings,
-        window::{ChannelWindow, WindowCmd, WindowEvent},
-    },
-    // features::FeatureConf,
-};
 
-const TEST_CODE: &str = "
-path circle(r,n)
-  jump r
+use uuid::Uuid;
 
-  store 180-360/n in beta
-  store 2*(2*@pi*r/2)/n in a
+mod api;
+mod err;
+mod prog;
+mod run;
 
-  turn right 180-beta/2
-  counter x from 0 to n do
-    walk a
-    turn right 180-beta
-  done
-endpath
-
-begin
-  store @max_y * 0.9 in radius
-  if @1 > 0 then
-    store @1 in radius
-  endif
-  store 100 in steps
-  if @2 > 0 then
-    store @2 in steps
-  endif
-
-  store 1 in @delay
-
-  path circle(radius,steps)
-  jump home
-  stop
-end
-";
+use err::*;
 
 /*
 /progs
     programs.json
-    <prog_name1>.tg
-    <prog_name2>.tg
+    <prog_name_1>.tg
+    <prog_name_2>.tg
+/static
+    index.html
+    script.js
+    styles.css
 
 */
 
-// enum Permission {
-//     None,
-//     Read,
-//     Write,
-// }
-
-// struct Prog {
-//     name: String,
-//     key: Option<String>,
-//     public: Permission,
-//     features: FeatureConf,
-// }
-
-struct SharedState {
-    commands: Receiver<WindowCmd>,
-    events: Sender<WindowEvent>,
-    inputs: Sender<String>,
-    outputs: Receiver<Result<String, String>>,
-}
-
-type AppState = State<Arc<Mutex<SharedState>>>;
+type AppState = State<Arc<Mutex<FullState>>>;
 
 #[tokio::main]
 async fn main() -> Result<(), std::io::Error> {
-    let prog = TEST_CODE.parse().unwrap();
-    let (window, commands, events) = ChannelWindow::construct();
-    let (in_tx, in_rx) = mpsc::channel();
-    let (interface, outputs) = Strings::construct(in_rx);
-    thread::spawn(move || {
-        RunConfig::new(&[])
-            .window(window)
-            .debug_in(interface)
-            .exec(&prog);
-    });
-    let state = SharedState {
-        commands,
-        events,
-        inputs: in_tx,
-        outputs,
-    };
-    let state = Arc::new(Mutex::new(state));
+    let state = FullState::new();
+    gc_job(state.clone(), Duration::from_secs(60 * 15));
     let cors = CorsLayer::new()
         .allow_methods([Method::GET, Method::POST])
         .allow_origin(Any);
     let app = Router::new()
-        .route("/exec", post(exec_cmd))
-        .route("/output", get(get_output))
-        .route("/event", post(event))
-        .route("/lines", get(get_drawings))
+        .route("/examples", get(api::example_list))
+        .route("/prog", post(api::new_prog))
+        .route("/examples/{name}/run", post(api::run_example))
+        .route("/prog/{id}/run", post(api::run_prog))
+        .route("/run/{id}/window", get(api::window_output))
+        .route("/run/{id}/events", post(api::report_event))
+        .route("/run/{id}/stop", post(api::stop_run))
+        .route("/run/{id}/debug", post(api::debug))
         .layer(cors)
         .with_state(state);
-    let listener = TcpListener::bind("127.0.0.1:8000").await?;
+    let listener = TcpListener::bind(("0.0.0.0", 8000)).await?;
     axum::serve(listener, app).await
 }
 
-async fn exec_cmd(State(state): AppState, cmd: String) {
-    state.lock().inputs.send(cmd).unwrap();
+#[derive(Default)]
+struct FullState {
+    progs: HashMap<Uuid, Prog>,
+    runs: HashMap<Uuid, Run>,
 }
 
-async fn get_output(State(state): AppState) -> Json<Value> {
-    Json(Value::Array(
-        state
-            .lock()
-            .outputs
-            .try_iter()
-            .map(|out| match out {
-                Ok(msg) => json!({"kind": "ok", "msg": msg}),
-                Err(msg) => json!({"kind": "err", "msg": msg}),
-            })
-            .collect(),
-    ))
+impl FullState {
+    fn new() -> Arc<Mutex<Self>> {
+        Arc::new(Mutex::new(Self::default()))
+    }
+
+    fn new_prog(&mut self, prog: Prog) -> Uuid {
+        let id = Uuid::new_v4();
+        self.progs.insert(id, prog);
+        id
+    }
+
+    fn start_run(&mut self, prog: turtle::TProgram, args: Vec<String>) -> Uuid {
+        let id = Uuid::new_v4();
+        self.runs.insert(id, Run::start(prog, args));
+        id
+    }
+
+    fn get_prog(&mut self, id: &Uuid) -> WebResult<&mut Prog> {
+        self.progs
+            .get_mut(id)
+            .ok_or(anyhow!("no program with id {id}"))
+            .err_status(StatusCode::NOT_FOUND)
+    }
+
+    fn get_run(&mut self, id: &Uuid) -> WebResult<&mut Run> {
+        self.runs
+            .get_mut(id)
+            .ok_or(anyhow!("no run with id {id}"))
+            .err_status(StatusCode::NOT_FOUND)
+    }
 }
 
-async fn event(State(state): AppState, Json(coord): Json<(f64, f64)>) {
-    state
-        .lock()
-        .events
-        .send(WindowEvent::MouseClicked(coord, true))
-        .unwrap();
-}
-
-async fn get_drawings(State(state): AppState) -> Json<Value> {
-    Json(Value::Array(
-        state
-            .lock()
-            .commands
-            .try_iter()
-            .filter_map(|cmd| match cmd {
-                WindowCmd::Draw(from, to, col) => Some(json!({
-                    "start": from,
-                    "end": to,
-                    "color": col
-                })),
-                _ => None,
-            })
-            .collect(),
-    ))
+fn gc_job(state: Arc<Mutex<FullState>>, max_idle: Duration) {
+    thread::spawn(move || {
+        loop {
+            {
+                let mut state = state.lock();
+                for run in state.runs.values() {
+                    run.gc(max_idle);
+                }
+                state.runs.retain(|_, r| !r.finished());
+            }
+            thread::sleep(Duration::from_secs(15));
+        }
+    });
 }
